ALICE_2022_I1868463/pythia6per1e6.log
  File "/cvmfs/alice.cern.ch/el7-x86_64/Packages/AGILe/v1.4.1-alice3-49/bin/agile-runmc", line 280
    except Exception, e:
                    ^
SyntaxError: invalid syntax
